# gemini-hackdays

./: .env.example  .gitignore  AGENT.md  AGENTS.md  LICENSE  PERSONA-C-PLAN.md  PROJECT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/backend/: README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py
apps/backend/app/schemas/: interpret.py
apps/backend/app/services/: gemini_client.py  mock_data.py
apps/backend/tests/: conftest.py  test_health.py  test_interpret.py
apps/frontend/: .env.example  .gitignore  README.md  next.config.ts  package.json
apps/frontend/data/planes/: AAD19.json  AAD26.json  ARQ19.json  ARQ26.json  BA19.json  BA26.json  BIE19.json  BIE26.json  BIR19.json  BIR26.json  BME19.json  BME26.json  CIS19.json  CIS26.json  HCM19.json  HCM26.json  ICT19.json  ICT26.json  IDM26.json  IDS19.json  IMT19.json  ING19.json  ING26.json  IRS19.json  IRS26.json  ITC19.json  ITC26.json  ITD19.json  ITD26.json  LAD19.json  LAD26.json  LC19.json  LC26.json  LDI19.json  (+19 more)
apps/frontend/scripts/: seed-planes.ts
apps/frontend/src/: middleware.ts
docs/: ai-governance.md
docs/architecture/: api-contract.md  system-design.md
docs/demo/: demo-script.md
docs/planning/: project-directions.md  team-roles.md
prompts/: claude-code-workflow.md  codex-review-workflow.md  gemini-structured-output.md
scripts/e2e/: setup.ts  types.ts
scripts/e2e/fixtures/: canvas-sample.ics  test-user.json
scripts/e2e/steps/: 05-insights-generate.ts
(+62 files in other folders)
